--- a/data-import/DataImportTool/FarmsMarketXMLReader/FarmsMarketXMLReader.csproj
+++ b/data-import/DataImportTool/FarmsMarketXMLReader/FarmsMarketXMLReader.csproj
@@ -8,11 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Dapper.SqlBuilder" Version="2.0.78" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="dat\SNAP.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="dat\SNAP.xlsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
