--- a/data-import/DataImportTool/FarmsMarketXMLReader/FarmsMarketXMLReader.csproj
+++ b/data-import/DataImportTool/FarmsMarketXMLReader/FarmsMarketXMLReader.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Dapper.SqlBuilder" Version="2.0.78" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.4" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.4" />
   </ItemGroup>
 
