--- a/backend/FarmersMarketApi.Application/FarmersMarketApi.Application.csproj
+++ b/backend/FarmersMarketApi.Application/FarmersMarketApi.Application.csproj
@@ -4,4 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FarmersMarketApi.Domain\FarmersMarketApi.Domain.csproj" />
+  </ItemGroup>
 </Project>
