--- a/backend/FarmersMarketApi/FarmersMarketApi.csproj
+++ b/backend/FarmersMarketApi/FarmersMarketApi.csproj
@@ -11,4 +11,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.5.0" />
   </ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\FarmersMarketApi.Application\FarmersMarketApi.Application.csproj" />
+	</ItemGroup>
 </Project>
