--- a/backend/FarmersMarketApi/appsettings.Development.json
+++ b/backend/FarmersMarketApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppConfiguration": {
+    "FarmersMarketSqliteFilePath": "/FarmersMarket.db"
   }
 }
