--- a/backend/FarmersMarketApi.Application/FarmersMarketApi.Application.csproj
+++ b/backend/FarmersMarketApi.Application/FarmersMarketApi.Application.csproj
@@ -5,6 +5,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\FarmersMarketApi.Domain\FarmersMarketApi.Domain.csproj" />
   </ItemGroup>
 </Project>
