--- a/backend/FarmersMarketApi.Infrastructure/FarmersMarketApi.Infrastructure.csproj
+++ b/backend/FarmersMarketApi.Infrastructure/FarmersMarketApi.Infrastructure.csproj
@@ -5,6 +5,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
   <ItemGroup>
      <ProjectReference Include="..\FarmersMarketApi.Application\FarmersMarketApi.Application.csproj" />
       <ProjectReference Include="..\FarmersMarketApi.Domain\FarmersMarketApi.Domain.csproj" />
