bring back on farmers markets for a specified state

--- a/backend/FarmersMarketApi/appsettings.Development.json
+++ b/backend/FarmersMarketApi/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "AppConfiguration": {
-    "FarmersMarketSqliteFilePath": "/FarmersMarket.db"
+    "FarmersMarketSqliteFilePath": "FarmersMarket.db"
   }
 }
