--- a/backend/FarmersMarketApi.Application/FarmersMarketApi.Application.csproj
+++ b/backend/FarmersMarketApi.Application/FarmersMarketApi.Application.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FarmersMarketApi.Domain\FarmersMarketApi.Domain.csproj" />
