--- a/backend/FarmersMarketApi.Domain/FarmersMarketApi.Domain.csproj
+++ b/backend/FarmersMarketApi.Domain/FarmersMarketApi.Domain.csproj
@@ -4,4 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.5" />
+  </ItemGroup>
 </Project>
