--- a/backend/FarmersMarketApi.Tests/FarmersMarketApi.Tests.csproj
+++ b/backend/FarmersMarketApi.Tests/FarmersMarketApi.Tests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.5" />
   </ItemGroup>
 
   <ItemGroup>
