feat: persist db in build

--- a/backend/FarmersMarketApi/FarmersMarketApi.csproj
+++ b/backend/FarmersMarketApi/FarmersMarketApi.csproj
@@ -16,4 +16,9 @@
 	  <ProjectReference Include="..\FarmersMarketApi.Application\FarmersMarketApi.Application.csproj" />
 	  <ProjectReference Include="..\FarmersMarketApi.Infrastructure\FarmersMarketApi.Infrastructure.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Update="FarmersMarket.db">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
 </Project>
