--- a/backend/FarmersMarketApi/appsettings.json
+++ b/backend/FarmersMarketApi/appsettings.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "AppConfiguration": {
+    "FarmersMarketSqliteFilePath": "FarmersMarket.db"
   }
 }
