--- a/backend/FarmersMarketApi/appsettings.Development.json
+++ b/backend/FarmersMarketApi/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "AppConfiguration": {
-    "FarmersMarketSqliteFilePath": "FarmersMarket.db"
+    "FarmersMarketSqliteFilePath": "FarmersMarket.db",
+    "ClientOriginUrl": "https://cfafarmersmarket.eastus.cloudapp.azure.com/,http://localhost:4200"
   }
 }
