remove slash in client origin

--- a/backend/FarmersMarketApi/appsettings.Development.json
+++ b/backend/FarmersMarketApi/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AppConfiguration": {
     "FarmersMarketSqliteFilePath": "FarmersMarket.db",
-    "ClientOriginUrl": "https://cfafarmersmarket.eastus.cloudapp.azure.com/,http://localhost:4200"
+    "ClientOriginUrl": "https://cfafarmersmarket.eastus.cloudapp.azure.com,http://localhost:4200"
   }
 }
