--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,24 @@
+(cors) {
+  @cors_preflight method OPTIONS
+  @cors header Origin {args.0}
+
+  handle @cors_preflight {
+    header Access-Control-Allow-Origin "{args.0}"
+    header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE"
+    header Access-Control-Allow-Headers "Content-Type"
+    header Access-Control-Max-Age "3600"
+    respond "" 204
+  }
+
+  handle @cors {
+    header Access-Control-Allow-Origin "{args.0}"
+    header Access-Control-Expose-Headers "Link"
+  }
+}
+
+
 cfafarmersmarket.eastus.cloudapp.azure.com
 {
+        import cors http://localhost:4200
         reverse_proxy 0.0.0.0:8080
 }
